--- a/UI-API/index.html
+++ b/UI-API/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src = "ajax.js"></script>
+    <script src = "ajax1.js"></script>
     <script>
         ajax("test.txt", (results)=>{
             console.log(results)
